WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222782
Fix unified build due to missing header include.
https://bugs.webkit.org/show_bug.cgi?id=222782
Summary
Fix unified build due to missing header include.
Jean-Yves Avenard [:jya]
Reported
2021-03-04 23:27:17 PST
Fix unified build due to missing header include.
Attachments
Patch
(1.28 KB, patch)
2021-03-04 23:38 PST
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Patch
(1.85 KB, patch)
2021-03-08 15:07 PST
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-04 23:28:56 PST
<
rdar://problem/75081020
>
Jean-Yves Avenard [:jya]
Comment 2
2021-03-04 23:38:08 PST
Created
attachment 422339
[details]
Patch
EWS
Comment 3
2021-03-08 14:39:46 PST
Tools/Scripts/svn-apply failed to apply
attachment 422339
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Jean-Yves Avenard [:jya]
Comment 4
2021-03-08 15:07:04 PST
Created
attachment 422624
[details]
Patch
Jean-Yves Avenard [:jya]
Comment 5
2021-03-08 15:07:44 PST
Comment on
attachment 422624
[details]
Patch already reviewed
EWS
Comment 6
2021-03-08 16:00:26 PST
Committed
r274115
: <
https://commits.webkit.org/r274115
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422624
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug