Fix unified build due to missing header include. https://bugs.webkit.org/show_bug.cgi?id=222782 <rdar://problem/75081020>

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-03-08
Reviewed by Wenson Hsieh.

No change in functionality.

* Modules/model-element/HTMLModelElement.cpp:
Add #include.

Canonical link: https://commits.webkit.org/235045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274115 268f45cc-cd09-0410-ab3c-d52691b4dbfc